TF-YAML/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: backend-app
